# DRAMsim3

./: CMakeLists.txt
configs/: DDR3_4Gb_x4_1600.ini
src/: common.h  configuration.cc  controller.cc  dram_system.cc  dram_system.h  dramsim3_py.cc  hmc.cc  hmc.h  memory_system.cc  memory_system.h
